--- a/NewFile.html
+++ b/NewFile.html
@@ -4,7 +4,7 @@
 <meta charset="ISO-8859-1">
 <title>Docker Demo</title>
 </head>
-<body style="background-color: aquamarine">
+<body style="background-color: yellow">
 <h1>Hello from spring boot</h1>
 </body>
 </html>
